<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_gravity="center"
    tools:context="com.india.myexpancetracker.StartActivity" >

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20pt" >
    </TextView>

    <EditText
        android:id="@+id/EditTextName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/EditTextMobile"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile"
        android:inputType="phone" >
    </EditText>

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/EditTextSalary"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salary"
        android:inputType="numberDecimal" >
    </EditText>

    <Button
        android:id="@+id/ButtonSubmit"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:text="@string/submit" >
    </Button>

</LinearLayout>